--- a/ML_SageMaker_Studies/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/ML_SageMaker_Studies/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -1089,7 +1089,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n"
+    "**Answer:**\n",
+    "* Containment is calculated seperately, irrespective of whether they are labeled as training or testing data.\n",
+    "* For every student answer, the answer is compared to the respective original source and a containment value is calculated.\n",
+    "* Because they are compared individually the containment calculation between test and training data do not influence each other."
    ]
   },
   {
@@ -2128,7 +2131,9 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "* I wanted to include other features of c1-c14 that have a correlation coefficient of 0.95 or fewer..\n",
+    "* I started with the decision to include the lcs_word feature as it seemed important based on the paper.\n",
+    "* From here I wanted to include other features of c1-c14 that have a correlation coefficient of 0.95 or fewer.\n",
+    "* Starting from lcs_word the first c-feature that was below this threshold was \"C_4\", hence I added this to my list of features\n",
     "* C_4 was highly correlated (correlation coefficient > 0.95) to all other c-features until C_14 and that is why I added C_14 to the list of features."
    ]
   },
@@ -2175,6 +2180,7 @@
     "    # your code here\n",
     "    data = pd.concat([pd.DataFrame(y), pd.DataFrame(x)], axis=1)\n",
     "    path = os.path.join(data_dir, filename)\n",
+    "    data.dropna(inplace=True)\n",
     "    data.to_csv(path, index=False, header=False)\n",
     "    \n",
     "    \n",
